Bug #692422. When creating a UUID for PDF files, an earlier change added 'uuid:' to the XML.

This potentially caused a buffer overrun leading to a string not being
NULL-terminated and causing a corrupted UUID to be written. Although I
am unable to reproduce this, this patch resolves the problem for the customer.